Added basic class for doing batch training, still WIP

--- a/config.yml
+++ b/config.yml
@@ -16,26 +16,34 @@ experiments:
   llama-inst-bbq:
     model: llama-3.1-8b-inst
     dataset: bbq
+    epochs: 3
   llama-inst-cbbq:
     model: llama-3.1-8b-inst
     dataset: cbbq
+    epochs: 3
   llama-inst-jbbq:
     model: llama-3.1-8b-inst
     dataset: jbbq
+    epochs: 3
   llama-inst-kobbq:
     model: llama-3.1-8b-inst
     dataset: kobbq
+    epochs: 3
   llama-bbq:
     model: llama-3.1-8b
     dataset: bbq
+    epochs: 3
   llama-cbbq:
     model: llama-3.1-8b
     dataset: cbbq
+    epochs: 3
   llama-jbbq:
     model: llama-3.1-8b
     dataset: jbbq
+    epochs: 3
   llama-kobbq:
     model: llama-3.1-8b
     dataset: kobbq
+    epochs: 3
 
 
